# wordle

./: .gitignore  Cargo.toml
src/: main.rs
