[package]
name = "wordle"
version = "0.1.0"
authors = ["vvmikheev <mikheev.vv@phystech.edu>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
reqwest = { version = "0.11", features = ["json"] }
tokio = { version = "1", features = ["full"] }
url = "2.2.2"
once_cell = "1.9.0"